tests/error/'''.lua
function LoudDog:makeSound()
  s = self.sound .. ' "
  print(s .. s ... s)
end